Fix cut off feature images

--- a/src/stylus/features.styl
+++ b/src/stylus/features.styl
@@ -26,7 +26,6 @@
 			float: left;
 			margin-right: 25px;
 			position: relative;
-			top: -10px;
 		}
 	}
 
@@ -132,6 +131,7 @@
 			width: 100%;
 			max-width: 800px;
 			padding: 0 8%;
+			padding-top: 10px;
 			overflow: hidden;
 			float: none;
 		}
